# CDFR2026-Programme-Robot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  lidar  pi_toolchain.cmake
.github/workflows/: c-cpp.yml
html/: camera.html  control.html  display.html  index.html  lidar.html  logs.html  navbar.html  robot.html
include/: main.hpp
include/actions/: action.hpp  actionInterface.hpp  dropAction.hpp  functions.h  gatherAction.hpp  strats.hpp
include/defs/: constante.h  structs.hpp  tableState.hpp
include/i2c/: Arduino.hpp  Asserv.hpp  i2c.hpp
include/lidar/: lidarAnalize.h
include/navigation/: astar.h  driveControl.h  nav.h  navigation.h  pathfind.h
include/utils/: logger.hpp
include/vision/: ArucoCam.hpp  geom.hpp  ransac.hpp
src/: main.cpp
src/actions/: action.cpp  dropAction.cpp  functions.cpp  gatherAction.cpp  strats.cpp
src/defs/: structs.cpp  tableState.cpp
src/i2c/: Arduino.cpp  Asserv.cpp  drive_interface.cpp  i2c.cpp
src/lidar/: Lidar.cpp  lidarAnalize.cpp
src/navigation/: astar.cpp  driveControl.cpp  nav.cpp  navigation.cpp  pathfind.cpp
src/restAPI/: restAPI.cpp
src/utils/: logger.cpp
src/vision/: ArucoCam.cpp  geom.cpp  ransac.cpp
tests/: LidarTests.cpp  main.cpp
